--- a/informe/Informe.tex
+++ b/informe/Informe.tex
@@ -7,6 +7,7 @@
 \usepackage{graphicx}
 \usepackage[spanish]{babel}
 \usepackage[utf8]{inputenc}
+\usepackage[hidelinks,breaklinks=true,backref=page]{hyperref}
 % Used for displaying a sample figure. If possible, figure files should
 % be included in EPS format.
 %
@@ -102,7 +103,8 @@ los resultados obtenidos de cada tubería. Un ejemplo de lo anterior es que la l
 es independiente de su procesamiento así que si se quiere cambiar esta funcionalidad es solamente necesario
 cambiar el pedazo del flujo encargado de esto, otro ejemplo de las ventajas es que el proceso de
 tokenización de los documentos generalmente es el mismo, en el caso de que se quieran implementar varios
-modelos se puede reutilizar este flujo sin mucho esfuerzo y manteniendo la misma arquitectura Figura \ref{pipeline_fig}.
+modelos se puede reutilizar este flujo sin mucho esfuerzo y manteniendo la misma arquitectura (Figura \ref{pipeline_fig}).
+
 
 \subsection{Comunicación con el motor de búsqueda}
 
@@ -135,6 +137,7 @@ framework nltk. Esta es dividida principalmente en varias etapas:
     \item Convertir el texto en tokens
     \item Limpiar los tokens
     \item Remover las stopwords
+    \item Aplicar raíz semántica a los tokens con Wordnet
     \item Aplicar stemming o lemmatizing a los tokens
 \end{enumerate}
 
@@ -282,16 +285,32 @@ se logre mejorar el rendimiento del modelo.
 Para la retroalimentación se eligió el algoritmo de Rocchio debido a su simplicidad. Este se basa 
 en el cálculo de centroides de un conjunto de documentos relevantes y no relevantes a una query
 y su posterior suma ponderada con el objetivo de mover el vector query hacia el conjunto de 
-documentos relevantes y alejarlo del conjunto de documentos no relevantes. La fórmula final sería
+documentos relevantes y alejarlo del conjunto de documentos no relevantes. La fórmula final sería:
 
 \begin{equation}
-    q_f = \alpha q_0 + \beta \frac{\sum_{d_r \in D_r} d_r}{|D_r|} - \gamma \frac{\sum_{d_{nr} \in D_{nr}} d_{nr}}{|D_{nr}|} 
+    q_f = \alpha q_0 + \frac{\beta}{|D_r|}*\sum_{d_r \in D_r} d_r -  \frac{\gamma}{|D_{nr}|}*\sum_{d_{nr} \in D_{nr}} d_{nr} 
 \end{equation}
 
 Dado que la relevancia depende de la query, se crea una estructura de datos la cual guarda esta correspondencia. 
 En un principio esta estructura de datos solamente guarda los vectores relevantes o no que coincidan exactamente
-con la query, aunque se pueden crear variantes de esta estructura que devuelvan los documentos relevantes o no
-relevantes que estén en una zona cercana y no exacta aumentando así el recuperado de estos documentos.
+con la query, aunque se ideó una variante de esta estructura para devuelver los documentos relevantes y no
+relevantes, para ser usado en el algoritmo de Rocchio, que estén en una zona cercana no exacta, aumentando así el recuperado de estos documentos.
+
+Se utilizan para dicho algoritmo toda la información acerca de los documentos relevantes y los no 
+relevantes para una determinada consulta(y la de consultas similares a esta en nuestro caso) para 
+acercar más a dicha consulta a la zona de los documentos relevantes y alejarla de los documentos no 
+relevantes. Se utilizan los valores usuales de alpha,
+beta y ro los cuales son 1, 0.75 y 0.1 respectivamente. 
+
+La retroalimentación también está dada explícita por el usuario. Se puede crear el modelo realizando 
+un sembrado automático de las relaciones consulta-documento del corpus las cuales sirven para, dada la 
+consulta, encontrar consultas similares a estas y devolver los documentos relevantes y no relevantes 
+para utilizar en el algoritmo de Rocchio. Se utiliza un valor preestablecido de 0.25 para separar las 
+consultas similares más significativas y además solo se escogen las 5 primeras consultas con mayor 
+similitud, incluyendo a la misma consulta para poder tomar en cuenta la retroalimentación dada por el 
+usuario.
+
+
 %TODO Implementar esta última idea, ver qué funciona mejor y ponerlo en el informe
 
 \subsection{Expansión de query}
@@ -514,17 +533,17 @@ un buen límite de separación con los atributos propuestos.
 \bibitem{alphaManning}
 Christopher D. Manning, Prabhakar Raghavan, and Hinrich Schütze:
 An Introduction to Information Retrieval. Online edition, pp. 127 Cambridge University Press,
-Cambridge, England (2009)
+Cambridge, England (2009) Ver página
 
 \bibitem{lsaWiki}
-Wikipedia, \url{https://en.wikipedia.org/wiki/Latent\_semantic\_analysis}. Consultado 25 de junio de 2022
+Wikipedia, \url{https://en.wikipedia.org/wiki/Latent\_semantic\_analysis}. Consultado 25 de junio de 2022 Ver página
 
 \bibitem{rankSVM}
 Joachims: Optimizing Search Engines Using Clickthrough Data. In: Proceedings of the ACM Conference 
-on Knowledge Discovery and Data Mining (KDD). ACM (2002)
+on Knowledge Discovery and Data Mining (KDD). ACM (2002) Ver página
 
 \bibitem{svmSklearn}
-Scikit Learn SVM Documentation, \url{https://scikit-learn.org/stable/modules/svm.html}. Consultado 25 de junio de 2022
+Scikit Learn SVM Documentation, \url{https://scikit-learn.org/stable/modules/svm.html}. Consultado 25 de junio de 2022 Ver página 
 
 \end{thebibliography}
 
